--- a/_write_manifest.qmd
+++ b/_write_manifest.qmd
@@ -32,8 +32,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/01-etl/02-tidy-data", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -44,8 +46,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/02-model/01-train-and-deploy-model", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -54,8 +58,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/02-model/02-model-metrics", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -76,8 +82,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/03-app/02-connect-widgets-app", 
-  appFiles = c("document.qmd", "arrows.png")
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
