--- a/_write_manifest.qmd
+++ b/_write_manifest.qmd
@@ -10,6 +10,7 @@ This purpose of this script is write a manifest.json file for each item of conte
 knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
 
 library(rsconnect)
+library(quarto)
 ```
 
 ## 1 ETL
@@ -19,8 +20,10 @@ library(rsconnect)
 ```{r}
 writeManifest(
   appDir = "content/01-etl/01-raw-data-refresh", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -29,8 +32,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/01-etl/02-tidy-data", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -41,8 +46,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/02-model/01-train-and-deploy-model", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -51,8 +58,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/02-model/02-model-metrics", 
-  appFiles = "document.qmd"
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
@@ -73,8 +82,10 @@ print("Complete 🎉")
 ```{r}
 writeManifest(
   appDir = "content/03-app/02-connect-widgets-app", 
-  appFiles = c("document.qmd", "arrows.png")
+  appPrimaryDoc = "document.qmd",
+  quarto = quarto_path()
 )
+
 print("Complete 🎉")
 ```
 
