--- a/content/03-app/02-connect-widgets-app/document.qmd
+++ b/content/03-app/02-connect-widgets-app/document.qmd
@@ -46,7 +46,6 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 library(connectwidgets)
 library(dplyr)
 library(stringr)
-library(metathis)
 
 client <- connect()
 all_content <- client %>% content()
@@ -116,7 +115,7 @@ bikeshare %>%
 
 ```{r}
 bikeshare %>%
-  filter(str_detect(title, "Pinned")) %>%
+  filter(str_detect(tolower(title), "pinned")) %>%
   rsc_table()
 ```
 
