--- a/content/02-model/02-model-metrics/document.qmd
+++ b/content/02-model/02-model-metrics/document.qmd
@@ -1,60 +1,60 @@
 ---
-title: "Model Step 2 - Model Metrics"
-date: "`r lubridate::now(tzone = 'EST')` EST"
+title: "Model Step 2 - Model Metrics Card"
+date: "`r lubridate::date(lubridate::now(tzone = 'EST'))`"
 output: html_document
+params:
+    name: sam.edwardes/bike_predict_model_r
+    version: NULL
 ---
 
-This report runs after the new data has been cleansed. The report pulls the cleaned data and loads the latest trained model, and then scores the data with the new model, over-writing any previous model scores.
-
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(warning = FALSE, message = FALSE, collapse = TRUE) 
-
-library(dplyr)
-library(dbplyr)
+library(tidyverse)
 library(vetiver)
+library(pins)
+library(yardstick)
 library(glue)
-library(ggplot2)
 
-# Internally developed packages
-library(bikeHelpR)
+knitr::opts_chunk$set(echo = FALSE)
+
+board <- pins::board_rsconnect()
+v <- vetiver_pin_read(board, params$name, version = params$version)
+v_meta <- pin_meta(board, params$name)
 ```
 
-## Data
+A [model card](https://doi.org/10.1145/3287560.3287596) provides brief, transparent, responsible reporting for a trained machine learning model.
 
-Connect to the database.
+## Model details
 
-```{r}
+- Developed by Sam Edwardes (RStudio - Solutions Engineer)
+- `r cli::pluralize("{v$description} using {ncol(v$ptype)} feature{?s}")`
+- This model was developed to predict how many [capital bikeshare](https://capitalbikeshare.com) bikes will be available for a given station based on the time of day, and day of the week
+- The data used to train the model was obtained from the [capital bikeshare API](https://ride.capitalbikeshare.com/system-data)
+- Version `r v$metadata$version` of this model was published at `r v_meta$created`
+- If you have questions about this model, please create an issue on our GitHub repo: <https://github.com/sol-eng/bike_predict/issues>
+
+## Intended use
+
+- The primary intended use of this model is to demonstrate an end-to-end data science workflow using [RStudio Connect](https://www.rstudio.com/products/connect/)
+
+## Metrics
+
+- The metrics used to evaluate this model are:
+  - Root Mean Squared Error (RMSE)
+  - R Squared (RSW)
+  - Mean Absolute Error (MAE)
+- We chose these metrics because because they are the most common metrics for assessing the performance of regression models, and that they are well understood by the data science community.
+
+## Training data & evaluation data
+
+```{r load_data}
 con <- odbc::dbConnect(odbc::odbc(), "Content DB", timeout = 10)
 bike_model_data <- tbl(con, "bike_model_data")
-glimpse(bike_model_data)
-```
 
-## Predictions
 
-Get the model object from the pin to access the model object metadata.
-
-```{r}
-board <- pins::board_rsconnect(
-  server = Sys.getenv("CONNECT_SERVER"),
-  key = Sys.getenv("CONNECT_API_KEY"),
-)
-
-model <- vetiver_pin_read(board, "sam.edwardes/bike_predict_model_r")
-```
-
-Divide the data into three categories:
-
-1. train - data that was used to train the model.
-2. test - the data that was used to test the model during training.
-3. latest - all new observations since the last model training.
-
-```{r create_test_data}
-print(model$metadata$user$train_dates)
-print(model$metadata$user$test_dates)
-
-train_start_date <- lubridate::as_date(model$metadata$user$train_dates[1])
-train_end_date <- lubridate::as_date(model$metadata$user$train_dates[2])
-test_end_date <- lubridate::as_date(model$metadata$user$test_dates[2])
+train_start_date <- lubridate::as_date(v$metadata$user$train_dates[1])
+train_end_date <- lubridate::as_date(v$metadata$user$train_dates[2])
+test_start_date <- lubridate::as_date(v$metadata$user$test_dates[1])
+test_end_date <- lubridate::as_date(v$metadata$user$test_dates[2])
 
 data <- bike_model_data %>%
   filter(date >= train_start_date) %>%
@@ -67,82 +67,141 @@ data <- bike_model_data %>%
     )
   )
 
-glimpse(data)
+train_data <- data %>%
+  filter(data_type == "train")
+
+test_data <- data %>%
+  filter(data_type == "test")
 ```
 
-Make predictions by calling the models API endpoint.
 
-```{r predict}
-url <- "https://colorado.rstudio.com/rsc/bike-predict-r-api/predict"
-endpoint <- vetiver_endpoint(url)
+::: {.panel-tabset}
 
-prediction_results <-
-  predict(endpoint, select(data, -n_bikes)) %>%
-  bind_cols(data) %>%
-  select(everything(), n_bikes, prediction = .pred) %>%
-  mutate(
-    residuals = n_bikes - prediction,
-    upload_time = Sys.time(),
-    model = "Random Forest"
+### Overview
+
+The training data set for this model was was obtained from the [capital bikeshare API](https://ride.capitalbikeshare.com/system-data). The Model is retrained on a daily basis using refreshed data. The most recent model training used data from `r train_start_date` to `r train_end_date`.
+
+### Training data
+
+The training data set for this model has the "prototype" or signature:
+
+```{r}
+glimpse(v$ptype)
+```
+
+Below is a summary of the data:
+
+```{r}
+train_data %>%
+  select(-n_bikes) %>%
+  skimr::skim()
+```
+
+### Evaluation data
+
+The model was evaluated on data from `r test_start_date` to `r test_end_date`. Below is a summary of the data:
+
+```{r}
+test_data %>%
+  select(-n_bikes) %>%
+  skimr::skim()
+```
+
+:::
+
+## Current Test Data Quantitative analyses 
+
+::: {.panel-tabset}
+
+```{r include=FALSE}
+## compute predictions for your evaluation data
+## `handler_startup` is designed to get the R process ready to make predictions
+suppressPackageStartupMessages(handler_startup(v))
+preds <- augment(v, test_data)
+
+latest_metrics <- preds %>%
+  arrange(date) %>%
+  vetiver_compute_metrics(
+    date_var = date,
+    period = "day",
+    truth = n_bikes,
+    estimate = .pred
   )
 
-glimpse(prediction_results)
+pin_name <- "sam.edwardes/bike-predict-model-metrics"
+
+if (pin_exists(board, pin_name)) {
+  print("Pin already exists, updating existing pin...")
+  vetiver_pin_metrics(board, latest_metrics, pin_name, overwrite = TRUE)
+} else {
+  print("Creating metrics pin for the first time...")
+  pin_write(board, latest_metrics, pin_name)
+}
 ```
 
-## Summarize model accuracy 
+### Overall
 
-We summarize the model results based on three windows: the model's original training window (stored alongside the model in the `model_details` pin), the new "test" data that has arrived after the training window, the latest data from the last time this report ran.
+The latest evaluation metrics:
 
-```{r current_metrics}
-current_metrics <- prediction_results %>%
-  group_by(data_type) %>%
-  tidyr::nest() %>%
-  mutate(
-    oos_metrics = purrr::map(data, ~ bikeHelpR::oos_metrics(.x$n_bikes, .x$prediction))
-  ) %>%
-  select(data_type, oos_metrics) %>%
-  tidyr::unnest_wider(oos_metrics) %>%
-  mutate(date = lubridate::today())
-
-current_metrics
+```{r}
+latest_metrics %>%
+  kableExtra::kable()
 ```
 
-Add the prediction results to the database.
+### By Prediction
 
-```{r send_metrics_to_db}
-all_time_metrics <- tbl(con, "bike_predict_metrics") %>%
-  collect() %>%
-  bind_rows(current_metrics) %>%
-  distinct(date, data_type, .keep_all = TRUE)
-
-odbc::dbWriteTable(
-  con, 
-  "bike_predict_metrics", 
-  all_time_metrics, 
-  overwrite = TRUE
-)
-
-glimpse(all_time_metrics)
-```
-
-Plot the model performance over time.
-
-```{r all_time_metrics_plot}
-fig <- all_time_metrics %>%
-  tidyr::pivot_longer(cols = c(-data_type, -date), names_to = "metric") %>%
-  ggplot(aes(x = date, y = value, color = data_type)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(~ metric) +
+```{r}
+preds %>%
+  ggplot(aes(n_bikes, .pred)) +
+  geom_abline(slope = 1, lty = 2, color = "gray60", size = 1.2) +
+  geom_jitter(alpha = 0.5, width = 0.4) +
   labs(
-    title = "Model performance over time",
-    x = "Date",
-    y = "Value"
+    title = glue("Model Performance on Test Data ({test_start_date} to {test_end_date})"),
+    x = "Acutal Number of Bikes",
+    y = "Predicted Number of Bikes"
   )
-
-plotly::ggplotly(fig)
 ```
 
-```{r disconnect_db}
-odbc::dbDisconnect(con)
+### By Location
+
+```{r}
+preds %>%
+  mutate(.resid = n_bikes - .pred) %>%
+  ggplot(aes(lon, lat, color = .resid)) +
+  geom_point(alpha = 0.8) +
+  scale_color_gradient2() +
+  coord_fixed() + 
+  labs(
+    title = glue("Model Performance by Location on Test Data ({test_start_date} to {test_end_date})"),
+    x = "Longitude",
+    y = "Latitude",
+    color = "Redisual"
+  )
 ```
+
+:::
+
+## All time Model Metrics
+
+```{r}
+all_time_metrics <- pin_read(board, pin_name)
+
+vetiver_plot_metrics(all_time_metrics) +
+  labs(
+    title = "All Time Model Metrics",
+    size = "Number of\nObservations"
+  )
+```
+
+## Ethical considerations
+
+- We considered the ethical impact the use of the model may have. We assessed that the overall risk an incorrect model prediction is relatively low.
+
+## Caveats & recommendations
+
+- This model does guarantee that a bike will be available at a station
+- We recommend using this model for demonstration purposes only
+- To see the raw source code that produced this document visit <https://github.com/sol-eng/bike_predict/blob/main/content/02-model/02-model-metrics/document.qmd>
+
+
+
