--- a/_content_admin.qmd
+++ b/_content_admin.qmd
@@ -139,6 +139,18 @@ set_content_tags(content, tags$R$Model)
 set_image_path(content, "./img/icon-pins-model.drawio.png")
 ```
 
+### 2.3 Model Card
+
+```{r}
+guid <- ""
+content <- content_item(client, guid)
+
+# Configure content settings
+content$update(access_type = "all")
+set_vanity_url(content, "bike-predict-r-model-card", force = TRUE)
+set_content_tags(content, tags$R$Model)
+set_image_path(content, "./content/02-model/03-model-card/icon.drawio.png")
+```
 
 ## 3 App
 
