--- a/content/02-model/02-model-metrics/document.qmd
+++ b/content/02-model/02-model-metrics/document.qmd
@@ -12,7 +12,9 @@ params:
     version: NULL
 ---
 
-This documents monitors the model performance on a daily basis. Below is a summary of the key model metrics including:
+## Background
+
+This documents monitors the model performance. It is refreshed on a daily basis. The following metrics are monitored:
 
 - Root Mean Squared Error (RMSE),
 - R Squared (RSQ), and
@@ -20,7 +22,7 @@ This documents monitors the model performance on a daily basis. Below is a summa
 
 ## Setup
 
-Load the required libraries and data.
+Load the required libraries and evaluation data. The table below is the first five rows of the evaluation data.
 
 ```{r setup}
 #| collapse: true
@@ -30,6 +32,7 @@ library(vetiver)
 library(pins)
 library(yardstick)
 library(glue)
+library(kableExtra)
 
 board <- pins::board_rsconnect()
 v <- vetiver_pin_read(board, params$name, version = params$version)
@@ -44,17 +47,21 @@ test_start_date <- lubridate::as_date(v$metadata$user$test_dates[1])
 test_end_date <- lubridate::as_date(v$metadata$user$test_dates[2])
 
 test_data <- bike_model_data %>%
-  filter(date >= train_start_date) %>%
-  collect() %>%
   filter(
     date >= train_start_date,
     date <= train_end_date
-  )
+  ) %>%
+  collect()
+  
+test_data %>%
+  head() %>%
+  kable() %>%
+  kable_material()
 ```
 
 ## Compute metrics
 
-Use vetiver to compute the daily evaluation metrics.
+Use vetiver to compute the latest evaluation metrics. The metrics are stored as a pin on RStudio Connect. The table below is the first 5 rows of the evaluation metrics
 
 ```{r compute_metrics}
 #| collapse: true
@@ -93,15 +100,20 @@ if (pin_exists(board, pin_name)) {
   print("Creating metrics pin for the first time...")
   pin_write(board, latest_metrics, pin_name)
 }
+
+all_time_metrics <- pin_read(board, pin_name)
+
+all_time_metrics %>%
+  head() %>%
+  kable() %>%
+  kable_material()
 ```
 
 ## Visualize metrics
 
 Use vetiver to visualize the all time model metrics.
 
-```{r all_time_metrics_plot}
-all_time_metrics <- pin_read(board, pin_name)
-
+```{r plot_metrics}
 vetiver_plot_metrics(all_time_metrics) +
   labs(
     title = "Model Metrics",
