Code folding for model card

--- a/content/02-model/02-model-metrics/document.qmd
+++ b/content/02-model/02-model-metrics/document.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Model - Model Metrics"
+title: "Model Step 3 - Model Metrics"
 date: "`r lubridate::date(lubridate::now(tzone = 'EST'))`"
 format:
   html:
