--- a/_content_admin.qmd
+++ b/_content_admin.qmd
@@ -111,9 +111,22 @@ set_content_tags(content, tags$R$Model)
 set_image_path(content, "./img/icon-plumber.drawio.png")
 ```
 
-### 2.2 Model Metrics
+### 2.2 Model Card
 
-#### 2.2.1 Model Metrics Card
+```{r}
+guid <- ""
+content <- content_item(client, guid)
+
+# Configure content settings
+content$update(access_type = "all")
+set_vanity_url(content, "bike-predict-r-model-card", force = TRUE)
+set_content_tags(content, tags$R$Model)
+set_image_path(content, "./content/02-model/03-model-card/icon.drawio.png")
+```
+
+### 2.3 Model Metrics
+
+#### 2.3.1 Model Metrics Document
 
 ```{r}
 guid <- "35a5a9c3-f8b1-414a-91cb-bdb5ad402580"
@@ -126,7 +139,7 @@ set_content_tags(content, tags$R$Model)
 set_image_path(content, "./content/02-model/02-model-metrics/icon.drawio.png")
 ```
 
-#### 2.2.2 Model Metrics Pin
+#### 2.3.2 Model Metrics Pin
 
 ```{r}
 guid <- "91d5bac2-db5f-44b6-b41b-d85138f48d8d"
@@ -139,18 +152,7 @@ set_content_tags(content, tags$R$Model)
 set_image_path(content, "./img/icon-pins-model.drawio.png")
 ```
 
-### 2.3 Model Card
 
-```{r}
-guid <- ""
-content <- content_item(client, guid)
-
-# Configure content settings
-content$update(access_type = "all")
-set_vanity_url(content, "bike-predict-r-model-card", force = TRUE)
-set_content_tags(content, tags$R$Model)
-set_image_path(content, "./content/02-model/03-model-card/icon.drawio.png")
-```
 
 ## 3 App
 
