update Connect deployment to use vetiver function

--- a/content/02-model/01-train-and-deploy-model/document.qmd
+++ b/content/02-model/01-train-and-deploy-model/document.qmd
@@ -241,13 +241,12 @@ client <- connectapi::connect(
 )
 
 # Deploy the content.
-content <- 
-  client %>%
-  connectapi::deploy(
-    connectapi::bundle_dir("api"),
-    name = app_name,
-    title = app_title
-  )
+vetiver_deploy_rsconnect(
+  board = board,
+  name = pin_name,
+  version = NULL,
+  appTitle = app_title,
+)
 ```
 
 ```{r close_db_connection}
