undo changes for vetiver deployment
undoing changes made for model deployment, so that the model deploys succesfully.

--- a/content/02-model/01-train-and-deploy-model/document.qmd
+++ b/content/02-model/01-train-and-deploy-model/document.qmd
@@ -241,12 +241,20 @@ client <- connectapi::connect(
 )
 
 # Deploy the content.
-vetiver_deploy_rsconnect(
-  board = board,
-  name = pin_name,
-  version = NULL,
-  appTitle = app_title,
-)
+content <- 
+  client %>%
+  connectapi::deploy(
+    connectapi::bundle_dir("api"),
+    name = app_name,
+    title = app_title
+  )
+# Deploy the content.
+#vetiver_deploy_rsconnect(
+#  board = board,
+#  name = pin_name,
+#  version = NULL,
+#  appTitle = app_title,
+#)
 ```
 
 ```{r close_db_connection}
